--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -1,3 +1,5 @@
+@use "tools" as *;
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -44,10 +46,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-input, select, textarea {
+input, button, select, textarea {
   border: 0;
   font-family: inherit;
   font-size: 100%;
+  background-color: $white;
   &:focus {
     outline: 0;
   }
